--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/index.css">
 </head>
 <body>
 
+
+<div class="modal--overlay"></div>
+<div class="modal--container">
+    <div class="modal--window"></div>
+</div>
 </body>
 </html>
