Modal header complete.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,33 @@
 
 <div class="modal--overlay"></div>
 <div class="modal--container">
-    <div class="modal--window"></div>
+    <div class="modal--window">
+        <div class="modal--header">
+            <div class="modal--header--left">
+                <div class="modal--title">
+                    Select clinic
+                </div>
+                <div class="modal--subtitle">
+                    Select where & when you would like to have the consultation
+                </div>
+
+
+            </div>
+
+            <div class="modal--header--right">
+                <div class="modal--title">
+                    Select date
+                </div>
+                <div class="modal--subtitle modal--subtitle__blue">
+                    Exact time will be specified. Appointment duration is 60 minutes
+
+                </div>
+                <div class="modal--close"></div>
+
+            </div>
+
+        </div>
+    </div>
 </div>
 </body>
 </html>
