Clinic list with custom scroll added.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="assets/vendor/mCustomScrollbar/jquery.mCustomScrollbar.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/index.css">
 </head>
 <body>
@@ -19,24 +20,101 @@
                 <div class="modal--subtitle">
                     Select where & when you would like to have the consultation
                 </div>
-
-
             </div>
-
             <div class="modal--header--right">
                 <div class="modal--title">
                     Select date
                 </div>
                 <div class="modal--subtitle modal--subtitle__blue">
                     Exact time will be specified. Appointment duration is 60 minutes
-
                 </div>
                 <div class="modal--close"></div>
+            </div>
+        </div>
+        <div class="modal--content">
+            <div class="modal--content--left">
+                <div class="modal--clinic">
+                    <div class="modal--clinic--title">
+                        Stockholm Centre
+                    </div>
+                    <div class="modal--clinic--subtitle">
+                        Nybrogatan 59
+                    </div>
+                </div>
+                <div class="modal--clinic">
+                    <div class="modal--clinic--title">
+                        Stockholm Västerort
+                        Stockholm Västerort
+                        Stockholm Västerort
+                        Stockholm Västerort
+                    </div>
+                    <div class="modal--clinic--subtitle">
+                        Address 123
+                    </div>
+                </div>
+                <div class="modal--clinic">
+                    <div class="modal--clinic--title">
+                        Malmö Innerstaden
+                    </div>
+                    <div class="modal--clinic--subtitle">
+                        Nybrogatan 59
+                        Nybrogatan 59
+                        Nybrogatan 59
+                        Nybrogatan 59
+                    </div>
+                </div>
+                <div class="modal--clinic">
+                    <div class="modal--clinic--title">
+                        Malmö Söder
+                    </div>
+                    <div class="modal--clinic--subtitle">
+                        Address 546
+                    </div>
+                </div>
+                <div class="modal--clinic">
+                    <div class="modal--clinic--title">
+                        Stockholm Centre
+                    </div>
+                    <div class="modal--clinic--subtitle">
+                        Nybrogatan 59
+                    </div>
+                </div>
+                <div class="modal--clinic">
+                    <div class="modal--clinic--title">
+                        Stockholm Västerort
+                    </div>
+                    <div class="modal--clinic--subtitle">
+                        Address 123
+                    </div>
+                </div>
+                <div class="modal--clinic">
+                    <div class="modal--clinic--title">
+                        Malmö Innerstaden
+                    </div>
+                    <div class="modal--clinic--subtitle">
+                        Nybrogatan 59
+                    </div>
+                </div>
+                <div class="modal--clinic">
+                    <div class="modal--clinic--title">
+                        Malmö Söder
+                    </div>
+                    <div class="modal--clinic--subtitle">
+                        Address 546
+                    </div>
+                </div>
+
+            </div>
+            <div class="modal--content--right">
 
             </div>
 
         </div>
     </div>
+
 </div>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="assets/vendor/mCustomScrollbar/jquery.mCustomScrollbar.js"></script>
+<script src="assets/js/scripts.js"></script>
 </body>
 </html>
