Calendar header added.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="assets/vendor/mCustomScrollbar/jquery.mCustomScrollbar.min.css">
+    <!-- scroll added -->
     <link rel="stylesheet" type="text/css" href="assets/css/index.css">
 </head>
 <body>
-
 
 <div class="modal--overlay"></div>
 <div class="modal--container">
@@ -103,18 +103,66 @@
                         Address 546
                     </div>
                 </div>
-
             </div>
             <div class="modal--content--right">
-
+                <div class="modal--calendar--header">
+                    <div class="modal--calendar--arrow--left"></div>
+                    <div class="modal--calendar--month">
+                        <div class="modal--calendar--month--name">
+                            August 27 - 31
+                        </div>
+                    </div>
+                    <div class="modal--calendar--arrow--right"></div>
+                </div>
+                <div class="modal--calendar--days">
+                    <div class="modal--calendar--day">
+                        <div class="modal--calendar--day--number">
+                            27
+                        </div>
+                        <div class="modal--calendar--day--text">
+                            Mon
+                        </div>
+                    </div>
+                    <div class="modal--calendar--day">
+                        <div class="modal--calendar--day--number">
+                            28
+                        </div>
+                        <div class="modal--calendar--day--text">
+                            Tue
+                        </div>
+                    </div>
+                    <div class="modal--calendar--day">
+                        <div class="modal--calendar--day--number">
+                            29
+                        </div>
+                        <div class="modal--calendar--day--text">
+                            Wed
+                        </div>
+                    </div>
+                    <div class="modal--calendar--day">
+                        <div class="modal--calendar--day--number">
+                            30
+                        </div>
+                        <div class="modal--calendar--day--text">
+                            Thu
+                        </div>
+                    </div>
+                    <div class="modal--calendar--day">
+                        <div class="modal--calendar--day--number">
+                            31
+                        </div>
+                        <div class="modal--calendar--day--text">
+                            Fri
+                        </div>
+                    </div>
+                </div>
             </div>
-
         </div>
     </div>
 
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script src="assets/vendor/mCustomScrollbar/jquery.mCustomScrollbar.js"></script>
+<script src="assets/vendor/mCustomScrollbar/jquery.mCustomScrollbar.js"></script>  <!-- scroll added -->
 <script src="assets/js/scripts.js"></script>
 </body>
 </html>
