Calendar time block created and scroll added.

--- a/index.html
+++ b/index.html
@@ -156,6 +156,115 @@
                         </div>
                     </div>
                 </div>
+                <div class="modal--calendar--times">
+                    <div class="modal--calendar--times--block">
+                        <div class="modal--calendar--time modal--calendar--time__disabled">
+                            08:00
+                        </div>
+                        <div class="modal--calendar--time">
+                            13:00
+                        </div>
+                        <div class="modal--calendar--time modal--calendar--time__disabled">
+                            15:00
+                        </div>
+                        <div class="modal--calendar--time">
+                            16:00
+                        </div>
+                        <div class="modal--calendar--time modal--calendar--time__disabled">
+                            17:00
+                        </div>
+                        <div class="modal--calendar--time">
+                            19:00
+                        </div>
+                    </div>
+                    <div class="modal--calendar--times--block">
+                        <div class="modal--calendar--time">
+                            08:00
+                        </div>
+                        <div class="modal--calendar--time modal--calendar--time__disabled">
+                            13:00
+                        </div>
+                        <div class="modal--calendar--time">
+                            15:00
+                        </div>
+                        <div class="modal--calendar--time modal--calendar--time__disabled">
+                            16:00
+                        </div>
+                        <div class="modal--calendar--time">
+                            16:00
+                        </div>
+                        <div class="modal--calendar--time">
+                            16:00
+                        </div>
+                    </div>
+                    <div class="modal--calendar--times--block">
+                        <div class="modal--calendar--time modal--calendar--time__disabled">
+                            08:00
+                        </div>
+                        <div class="modal--calendar--time modal--calendar--time__disabled">
+                            13:00
+                        </div>
+                        <div class="modal--calendar--time">
+                            15:00
+                        </div>
+                        <div class="modal--calendar--time modal--calendar--time__disabled">
+                            16:00
+                        </div>
+                        <div class="modal--calendar--time">
+                            16:00
+                        </div>
+                        <div class="modal--calendar--time">
+                            16:00
+                        </div>
+                    </div>
+                    <div class="modal--calendar--times--block">
+                        <div class="modal--calendar--time">
+                            08:00
+                        </div>
+                        <div class="modal--calendar--time modal--calendar--time__selected">
+                            13:00
+                        </div>
+                        <div class="modal--calendar--time modal--calendar--time__disabled">
+                            15:00
+                        </div>
+                        <div class="modal--calendar--time ">
+                            15:00
+                        </div>
+                        <div class="modal--calendar--time">
+                            15:00
+                        </div>
+                        <div class="modal--calendar--time">
+                            16:00
+                        </div>
+                    </div>
+                    <div class="modal--calendar--times--block">
+                        <div class="modal--calendar--time modal--calendar--time__disabled">
+                            08:00
+                        </div>
+                        <div class="modal--calendar--time">
+                            13:00
+                        </div>
+                        <div class="modal--calendar--time modal--calendar--time__disabled">
+                            15:00
+                        </div>
+                        <div class="modal--calendar--time">
+                            16:00
+                        </div>
+                        <div class="modal--calendar--time modal--calendar--time__disabled">
+                            15:00
+                        </div>
+                        <div class="modal--calendar--time">
+                            16:00
+                        </div>
+                        <div class="modal--calendar--time modal--calendar--time__disabled">
+                            15:00
+                        </div>
+                        <div class="modal--calendar--time">
+                            16:00
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </div>
     </div>
